refactor: 메뉴 조회 API 로직 수정